  cache compression.

- A progress bar has been added to show the progress of time-consuming
  options like -c/--cleanup, -C/--clear and -x/--show-compression.

- (More to be written.)


ccache 3.7.5
------------
Release date: TBD

Bug fixes
~~~~~~~~~

- Fixed a regression in 3.7.2 that could result in a warning message instead of
  an error in an edge case related to usage of “-Werror”.


ccache 3.7.4
------------
Release date: 2019-09-12

Improvements
~~~~~~~~~~~~

- Added support for the `-gz[=type]` compiler option (previously ccache would
  think that “-gz” alone would enable debug information, thus potentially
  including the current directory in the hash).

- Added support for converting paths like “/c/users/...” into relative paths on
  Windows.


ccache 3.7.3
------------
Release date: 2019-08-17

Bug fixes
~~~~~~~~~

- The cache size (which is counted in “used disk blocks”) is now correct on
  filesystems that use more or less disk blocks than conventional filesystems,
  e.g. ecryptfs or btrfs/zfs with transparent compression. This also fixes a
  related problem with ccache's own test suite when run on such file systems.

- Fixed a regression in 3.7.2 when using the compiler option “-Werror” and then
  “-Wno-error” later on the command line.


ccache 3.7.2
------------
Release date: 2019-07-19

Bug fixes
~~~~~~~~~

- The compiler option `-gdwarf*` no longer forces “run_second_cpp = true”.

- Added verification that the value passed to the `-o/--set-config` option is
  valid.

- Fixed detection of precompiled headers in the depend mode.

- Bail out on too hard Clang option `-ftime-trace`.

- ccache now updates the correct stats file when adding/updating manifest
  files. This bug previously made the file and size statistics counters
  incorrect over time.

- Fixed warnings from Clang about unused arguments during preprocessing.

- Unknown manifest versions are now handled gracefully in `--dump-manifest`.

- Fixed `make check` with “funny” locales.

